fix: corregir valores de ancho en encabezado y menú desplegable para compatibilidad con Safari móvil

--- a/src/componentes/contenido-grupos/grupoContenido.scss
+++ b/src/componentes/contenido-grupos/grupoContenido.scss
@@ -49,11 +49,7 @@
         justify-content: center;
         align-items: center;
         max-width: 33vw;
-        max-width: 33dvw;
-
-        @supports (width: 100vw) and (not (width: 100dvw)) {
-          max-width: 33vw;
-        }
+        max-width: 33vw;
 
         @include altura-encabezado-bp($altura-encabezado, max-height);
       }
